@@ -16,6 +16,7 @@
 	* Disable ulimit if there is no getrlimit.
 	* Disable histcmd completely when SMALL is defined.
 	* Added default definition for SSIZE_MAX.
+	* Removed standalone/csh support from printf.
 
 2005-10-26  Herbert Xu <herbert@gondor.apana.org.au>
 
